# ctc-segmentation-nemo

./: .gitignore  .gitmodules  README.md  pyproject.toml
src/ctc_segmentation_nemo/: __init__.py  asr_align.py
