[project]
name = "ctc-segmentation-nemo"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "yuta0306", email = "yuta.20010306@gmail.com" }
]
dependencies = [
    "soundfile>=0.12.1",
    "numpy>=1.23.5",
    "torch>=2.2.0",
    "ctc-segmentation>=1.7.4",
    "pip>=24.0",
    "Cython>=3.0.8",
    "wheel>=0.42.0",
    "typeguard>=4.1.5",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
