[project]
name = "ctc-segmentation-nemo"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "yuta0306", email = "yuta.20010306@gmail.com" }
]
dependencies = [
    "soundfile>=0.12.1",
    "torch>=2.2.0",
    "ctc-segmentation>=1.7.4",
    "typeguard>=4.1.5",
    "librosa>=0.10.1",
    "nemo_toolkit[asr]>=1.22.0",
    "numpy<1.24",
]
readme = "README.md"
requires-python = ">= 3.8"

[tool.setuptools.package-dir]
"" = "src"

[build-system]
requires = ["setuptools", "Cython", "wheel"]
build-backend = "setuptools.build_meta"
